<resources>
    <string name="app_name">MVC</string>
    <string name="action_login">S\'authentifier</string>
    <string name="action_negative">Réessayer</string>
    <string name="action_positive">Valider</string>
    <string name="input_hint">Combien y a-t-il de pomme?</string>
    <string name="answer_negative">Veuillez réessayer</string>
    <string name="answer_positive">Bonne réponse</string>
    <string name="user_email">Courriel</string>
    <string name="user_first_name">Prénom</string>
    <string name="user_last_name">Nom de famille</string>
    <string name="birth_date">Date de naissance (JJ/MM/AAAA)</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="user_allergic">Allergie aux pommes</string>
</resources>
