<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/primaryPageColor"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/user_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/user_first_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/user_last_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birth_date_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:hint="@string/birth_date"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number_editor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:hint="@string/phone_number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatCheckBox
        style="@style/CheckboxStyle"
        android:id="@+id/allergic_box"
        android:text="@string/user_allergic" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@drawable/sh_rounded_white">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/genre_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:text="@string/action_negative"
            app:backgroundTint="@color/colorPrimaryWhitish" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:text="@string/action_positive" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>