<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@color/colorPrimaryWhitish" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_editor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/input_hint"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/negative_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/colorPrimaryWhitish"
                android:text="@string/action_negative" />

            <Space
                android:layout_width="8dp"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/positive_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:text="@string/action_positive" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:padding="8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>